[fix] Navbar z-index 수정

--- a/src/scss/components/Header/Header.scss
+++ b/src/scss/components/Header/Header.scss
@@ -8,8 +8,9 @@ header {
   // border: 1px solid black;
   height: 8rem;
   pointer-events: all;
-  z-index: 2;
+  z-index: 100;
   // border: 3px solid red;
+
 
   .nav-area {
     top: 0;
